<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="About Us"
            tools:ignore="HardcodedText" />
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/baseline_home_repair_service_24"
                android:title="@string/donate"/>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/baseline_add_to_photos_24"
                android:title="@string/gallery"/>
        </menu>

    </item>

</menu>